@@ -678,5 +678,6 @@ Spring 4.3 also improves the caching abstraction as follows:
 * The JUnit support in the _Spring TestContext Framework_ now requires JUnit 4.12 or higher.
 * Server-side Spring MVC Test supports expectations on response headers with multiple values.
 * Server-side Spring MVC Test parses form data request content and populates request parameters.
-* Client-side Spring MVC Test supports expected count of request executions (once, manyTimes, min, max, etc.)
-* Client-side Spring MVC Test supports expectations for form data in the request body.
+* Client-side REST test support allows indicating how many times a request is expected and
+whether the oder of declaration for expectations should be ignored (see <<spring-mvc-test-client>>)
+* Client-side REST Test supports expectations for form data in the request body.
